--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "standard": "^10.0.3",
-    "tap": "^10.7.3 || 11"
+    "standard": "^11.0.1",
+    "tap": "^12.0.1"
   },
   "license": "ISC",
   "files": [
