--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "author": "Isaac Z. Schlueter <i@izs.me> (http://blog.izs.me/)",
-  "name": "ini",
-  "description": "An ini encoder/decoder for node",
+  "author": "Nfer Zhuang <nfer.zhuang@gmail.com>",
+  "name": "git-config-ini",
+  "description": "An git config ini encoder/decoder for node",
   "version": "1.3.5",
   "repository": {
     "type": "git",
-    "url": "git://github.com/isaacs/ini.git"
+    "url": "https://github.com/nfer/git-config-ini.git"
   },
   "main": "ini.js",
   "scripts": {
@@ -23,7 +23,7 @@
     "standard": "^11.0.1",
     "tap": "^12.0.1"
   },
-  "license": "ISC",
+  "license": "MIT",
   "files": [
     "ini.js"
   ]
