multiple pushurls for remote

--- a/test/fixtures/foo.ini
+++ b/test/fixtures/foo.ini
@@ -63,3 +63,10 @@ nocomment = this\; this is not a comment
 
 # this next one is not a comment!  it's escaped!
 noHashComment = this\# this is not a comment
+
+; this overloading is git config format but not standard ini
+[remote "a"]
+url = 1
+pushurl = 2
+pushurl = 3
+pushurl = 4
