--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "tap test/*.js --100 -J",
     "preversion": "npm test",
     "postversion": "npm publish",
-    "postpublish": "git push origin --all; git push origin --tags"
+    "postpublish": "git push origin --all; git push origin --tags",
+    "build": "webpack-cli"
   },
   "engines": {
     "node": "*"
@@ -21,7 +22,9 @@
   "dependencies": {},
   "devDependencies": {
     "standard": "^11.0.1",
-    "tap": "^12.0.1"
+    "tap": "^12.0.1",
+    "webpack": "^4.16.4",
+    "webpack-cli": "^3.1.0"
   },
   "license": "MIT",
   "files": [
